[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-utilities"
version = "0.5.0"
description = "An all-in-one package containing a collection of self-implemented Python packages/frameworks/libraries (the following will collectively be known as 'library') such that you can add this into a project as a submodule and you can import the libraries directly"
authors = [
    { name="Thanatisia", email="55834101+Thanatisia@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 3 - Alpha',

    # Indicate who your project is intended for
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',

    # Pick your license as you wish
    'License :: OSI Approved :: MIT License',

    # Specify the Python versions you support here.
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    # List your dependencies here
    ## Pip Packages
    "asciinema",
    ## Git Packages
    "android-project-generator@git+https://github.com/Thanatisia/android-project-generator#subdirectory=app/languages/python&branch=main",
    "mkparse@git+https://github.com/Thanatisia/makefile-parser-python"
]

[project.scripts]
# Program Entry Point(s) and scripts
asciinema-util = "pyutils.scripts.asciinemawrapper:main"
apg-generate = "pyutils.scripts.apggenerate:main"
benchmarker = "pyutils.scripts.benchmark:main"
de-duplicator = "pyutils.scripts.deduplicator:main"
threadexec = "pyutils.scripts.threadexec:main"
git-mass-update = "pyutils.scripts.gitmassupdate:main"
treewalk = "pyutils.scripts.treetraversal:main"
sysenvhndlr = "pyutils.scripts.sysenvbufhndlr:main"
metasearch = "pyutils.scripts.metasearch:main"

[project.urls]
Homepage = "https://github.com/Thanatisia/py-utilities"
Repository = "https://github.com/Thanatisia/py-utilities.git"

[tools.setuptools.packages.find]
where = ["src"]

